--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,21 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00ff00"
+        android:background="#ffffff"
         android:id="@+id/rootView"
         tools:context=".MainActivity">
+
+    <com.jamjamucho.belfry.DentedEdge
+            android:id="@+id/bottomPanelTopEdge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:belfry_anchorTo="@id/bottomPanel"
+            app:belfry_curveRadius="24dp"
+            app:belfry_shadowSize="4dp"
+            app:belfry_startShadowColor="#11000000"
+            app:belfry_endShadowColor="#00000000"
+            app:belfry_tint="#ffffff"/>
 
     <com.jamjamucho.belfry.BottomPanel
             android:id="@+id/bottomPanel"
@@ -30,10 +42,10 @@
                     android:paddingTop="@dimen/main_app_bar_height">
 
                 <TextView android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
+                          android:layout_height="wrap_content"
                           android:text="@string/large_text"
                           android:padding="16dp"
-                      android:id="@+id/menu"/>
+                          android:id="@+id/menu"/>
 
                 <TextView android:layout_width="match_parent"
                           android:layout_height="wrap_content"
